--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Simple DOM Changing (Animal TREE)</title>
-  <style>
-    .tree {
-      color: green
-    }
-    .hidden {
-      display: none;
-    }
-  </style>
+  <title>Simple DOM Changing</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+  <h2>Example of DOM manipulation</h2>
   <ul class="tree">
     <li>Животные
       <ul>
@@ -50,6 +44,7 @@
       </ul>
     </li>
   </ul>
+  <button onclick="go()">Click me</button>
   <script src="./index.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
